# Routefuel

./: Cargo.toml  DEPLOYMENT.md  README.md
incomplete/: example_comprehensive.rs  main_prod.rs
migrations/: 002_semantic_cache_and_vision.sql
src/: cost_tracker.rs  main.rs  route_engine_v2.rs  tokens.rs
user-data/outputs/routefuel-final/incomplete/: SMART_ROUTING_CODE.rs  admin.rs  async_handler.rs  client_registry.rs  streaming.rs  telemetry.rs
user-data/outputs/routefuel-final/migrations/: 001_request_logs.sql  003_client_tiers.sql
user-data/outputs/routefuel-final/src/: auth.rs  circuit_breaker.rs  connectors.rs  cost_tracker.rs  lib.rs  main.rs  rate_limiter.rs  route_engine.rs  semantic_cache.rs  tokens.rs  vision.rs
